force-app/main/default/objects/Seguimiento__c/Seguimiento__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para el seguimiento de tareas personalizadas para los contactos</description>
    <label>Seguimiento</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Nombre de Seguimiento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seguimientos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>