force-app/main/default/objects/Seguimiento__c/fields/Clima_Actual__c.field-meta.xml
<CustomField>
    <fullName>Clima_Actual__c</fullName>
    <label>Clima_Actual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>