force-app/main/default/objects/Seguimiento__c/fields/Coordinador__c.field-meta.xml
<CustomField>
    <fullName>Coordinador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordinador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Seguimientos</relationshipName>
    <type>Lookup</type>
</CustomField>