force-app/main/default/objects/Seguimiento__c/fields/Es_prioritario__c.field-meta.xml
<CustomField>
    <fullName>Es_prioritario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es_prioritario</label>
    <type>Checkbox</type>
</CustomField>