force-app/main/default/objects/Seguimiento__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <description>La etapa del seguimiento, se usa para calcular el porcentaje de completitud y si
        está finalizado.</description>
    <label>Etapa</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>En Proceso</fullName>
            </value>
            <value>
                <fullName>Completado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>