force-app/main/default/objects/Seguimiento__c/fields/Fecha_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Objetivo__c</fullName>
    <label>Fecha_Objetivo</label>
    <required>true</required>
    <type>Date</type>
</CustomField>