force-app/main/default/objects/Seguimiento__c/fields/Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>Ubicacion__c</fullName>
    <label>Ubicacion</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>